--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: telegram-jobs-bot
+    name: telegram-jobs-bot-v2
     env: python
     region: frankfurt
     buildCommand: pip install -r requirements.txt
