--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-python-telegram-bot==20.7
+python-telegram-bot==13.7
 requests==2.31.0
 beautifulsoup4==4.12.2
 python-dotenv==1.0.0
-SQLAlchemy==2.0.39 
+SQLAlchemy==2.0.25
+psycopg2-binary==2.9.9
+flask==3.0.0 
